--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "decode-js",
+  "main": "node src/api.js",
   "scripts": {
     "decode": "node src/main.js",
     "deob": "node src/main.js -t obfuscator",
