--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
   "builds": [
     { "src": "src/api.js", "use": "@vercel/node" }
   ]
